# zolkin-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  Pipfile  README.md  app.py  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/: __init__.py  file_to_rag.py  init_agent.py  utils.py
api/routes/: __init__.py  chat.py  files.py  google_auth.py  users.py
app/: config.py
app/blueprints/: auth.py  chat.py  files.py
app/core/: __init__.py
app/core/agent/: ZolkinAgent.py  __init__.py
app/core/auth/: google_auth.py  user_manager.py
app/core/processing/: files_strategy.py
blueprints/: __init__.py  auth.py  chat.py  files.py  users.py
core/: __init__.py  files_strategy.py  google_auth.py  ocr.py
core/agent/: ZolkinAgent.py  __init__.py  agent_manager.py
core/agent/memory/: __init__.py  memory.py  utils.py
core/agent/tools/: __init__.py  calendar.py  gmail.py  (+1 more)
core/auth/: google_auth.py
core/processing/: files_strategy.py  ocr.py
notebooks/: calendar.ipynb  calendar_api.ipynb  calendar_toolkit.ipynb  gmail.ipynb  gmail_toolkit.ipynb  redis.ipynb  redis_memory.ipynb  tool.ipynb
rag/: ocr.py
secrets/: credentials.json
services/: __init__.py  connections.py
services/agent/: __init__.py  agent_manager.py  google_tools.py  milvus_storage.py  zolkin.py
services/auth/: __init__.py  google_auth.py  user_manager.py
services/files/: __init__.py  file_manager.py  ocr.py  strategies.py  utils.py
tools/: __init__.py  gmail.py
tools/calendar/: __init__.py  base.py  create_event.py  get_events.py  toolkit.py
(+4 files in other folders)
