[project]
name = "zolkin"
version = "0.2.0"
description = "Zolkin Backend. A FastAPI API for Zolkin project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.5.2",
    "fastapi>=0.115.12",
    "google-auth>=2.38.0",
    "itsdangerous>=2.2.0",
    "langchain-core>=0.3.50",
    "langchain-google-community>=2.0.7",
    "langchain-milvus>=0.1.7",
    "langchain-openai>=0.3.12",
    "langchain-redis>=0.2.0",
    "langgraph>=0.3.24",
    "ocrmypdf>=16.10.0",
    "pymilvus>=2.4.9",
    "pymupdf>=1.25.5",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.9.9",
]
